--- a/src/main/resources/i18n/login_en_US.properties
+++ b/src/main/resources/i18n/login_en_US.properties
@@ -1,4 +1,8 @@
-btn=Sign In
-password=Pass Word
-remember=Remember Me
-username=User Name
+login.tip=Please Sign In
+login.password=Password
+login.remember=Remember Me
+login.username=User Name
+login.submit=Submit
+login.title=Login Student Management System
+login.CN=Chinese
+login.US=English
