--- a/src/main/resources/i18n/login_zh_CN.properties
+++ b/src/main/resources/i18n/login_zh_CN.properties
@@ -1,4 +1,8 @@
-btn=登录
-password=密码
-remember=记住我
-username=用户名
+login.tip=\u8BF7\u767B\u5F55
+login.password=\u5BC6\u7801
+login.remember=\u8BB0\u4F4F\u6211
+login.username=\u7528\u6237\u540D
+login.submit=\u63D0\u4EA4
+login.title=\u767B\u5F55\u5B66\u751F\u7BA1\u7406\u7CFB\u7EDF
+login.CN=\u4E2D\u6587
+login.US=\u82F1\u8BED
